--- a/LoginPage-Front/angular.json
+++ b/LoginPage-Front/angular.json
@@ -26,10 +26,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+                "src/assets"
             ],
             "styles": [
               "src/styles.scss"
@@ -85,10 +82,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+               "src/assets"
             ],
             "styles": [
               "src/styles.scss"
@@ -98,5 +92,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "c47f59c8-88e4-4514-9200-3ce744c6f046"
   }
 }
